[add] aws-sdk dependency

--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "ember-cli-deploy-s3-zip",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Upload ember dist dir zipped to S3",
   "keywords": [
     "ember-addon",
     "ember-cli-deploy-plugin"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Nicolle Jimenez <nicolle.jimenez91@gmail.com>",
+  "contributors": [
+    {
+      "name": "Simon Escobar",
+      "email": "sescobb27@gmail.com"
+    }
+  ],
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/nicollejimenez/ember-cli-deploy-s3-zip",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "aws-sdk": "^2.43.0",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-deploy-plugin": "^0.2.9"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
